--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
-    "mysql": "^2.16.0"
+    "jsonfile": "^5.0.0",
+    "mysql": "^2.16.0",
+    "path": "^0.12.7",
+    "routes": "^2.1.0",
+    "urlencode": "^1.1.0"
   }
 }
