--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "BURGER",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,5 +25,6 @@
     "path": "^0.12.7",
     "routes": "^2.1.0",
     "urlencode": "^1.1.0"
-  }
+  },
+  "description": ""
 }
