--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/JHGarrett/BURGER#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "jsonfile": "^5.0.0",
+    "method-override": "^3.0.0",
     "mysql": "^2.16.0",
     "path": "^0.12.7",
     "routes": "^2.1.0",
